--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -1,12 +1,12 @@
 name: Build and Deploy
 on:
-  push
+  push:
     branches: [ main ]
-jobs
+jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎
+      - name: Checkout 🛎️
         uses: actions/checkout@main
       - name: Install and Build 🔧
         run: |
