correct github actions config

--- a/.github/workflows/deploy_gh_pages.yml
+++ b/.github/workflows/deploy_gh_pages.yml
@@ -10,8 +10,8 @@ jobs:
         uses: actions/checkout@main
       - name: Install and Build 🔧
         run: |
-          npm install
-          npm run docs:build
+          yarn install
+          yarn run docs:build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
